--- a/src/main/webapp/a01_html/a01_start/a04_img.html
+++ b/src/main/webapp/a01_html/a01_start/a04_img.html
@@ -18,6 +18,7 @@
 		http://localhost:7080/webprj
 		\webprj\src\main\webapp
 		1) 프로젝트경로명/경로위치를 설정
+		file:// : 파일시스템으로 접근하는 경우 : 현재 서버의 파일시스템 기준
 	
 	3. 이미지 속성값
 		src : 이미지 파일 url
