--- a/src/main/webapp/a01_html/a01_start/a05_link.html
+++ b/src/main/webapp/a01_html/a01_start/a05_link.html
@@ -16,5 +16,16 @@
 4. 항해 : 하이퍼링크를 따라 다른 웹페이지를 방문하는 것
 
  -->
+ 
+<!-- 
+# a link를 통한 페이지 호출 방법
+# js의 location.href="자원"을 통한 페이지 호출
+# 절대 경로 : /webprj/ 을 기준으로 webapp 하위에 있는 폴드를 계층적으로 접근
+ -->
+ 	<a href="a01_welcomWeb.html">
+ 		현재 같은 폴드에 있는 파일 접근(상대경로)</a><br>
+ 	<a href="/webprj/a01_html/a01_start/a02_showAllFunction.jsp">
+ 		현재 같은 폴드에 있는 파일 접근(절대경로)</a>
+ 
 </body>
 </html>
