--- a/src/main/webapp/a02_javascript/a12_object.html
+++ b/src/main/webapp/a02_javascript/a12_object.html
@@ -12,6 +12,24 @@
 </body>
 <script type="text/javascript">
 /*
+# js에서 객체
+1. 종류
+	json형 객체 : {속성 : 속성값, ...}
+	생성자(함수형) 객체
+		function Person(name, age){
+			this.name = name;
+			this.age = age;
+		}
+		var p01 = new Person("홍길동", 25)
+	class형 객체
+		class Person{
+			
+		}
+	DOM 객체
+		var h1Obj = document.querySelector("h1")
+ */
+
+/*
 # 자바스크립트 객체 구성
 1. 여러 개의 프로퍼티와 메소드로 구성
 	1) 프로퍼티 : 객체의 고유한 속성(변수)
