--- a/src/main/webapp/a02_javascript/a13_array.html
+++ b/src/main/webapp/a02_javascript/a13_array.html
@@ -9,9 +9,20 @@ var obj = {name : "홍길동", show : function() { alert(this.name) }};
 
 // 배열
 var arry = ["사과", "바나나", "딸기"];
+// 객체형 배열
+var objArry = [
+	{name:"사과", price:3000, cnt:2},
+	{name:"바나나", price:4000, cnt:3},
+	{name:"딸기", price:12000, cnt:4}
+]
 
 console.log(obj)
 console.log(arry)
+for(var idx = 0; idx < objArry.lengtho; idx++){
+	objArry[idx].name
+	objArry[idx].price
+	objArry[idx].cnt
+}
 
 </script>
 </head>
