--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h2> 웹 프로그래밍 시작!!(html)</h2>
+	<h2> 웹 프로그래밍 시작!!(고정아이피)</h2>
 </body>
 </html>
 
